force-app/main/default/objects/agreement_id_creation__c/agreement_id_creation__c.object-meta.xml
<CustomObject>
    <label>Agreement ID Creation</label>
    <nameField>
        <label>agreement_id_creation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement ID Creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>