force-app/main/default/objects/agreement_id_creation__c/fields/beneficiary_bank_account_name__c.field-meta.xml
<CustomField>
    <fullName>beneficiary_bank_account_name__c</fullName>
    <label>Beneficiary Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>