force-app/main/default/objects/agreement_id_creation__c/fields/beneficiary_bank_id__c.field-meta.xml
<CustomField>
    <fullName>beneficiary_bank_id__c</fullName>
    <label>Beneficiary Bank ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>