force-app/main/default/objects/agreement_id_creation__c/fields/beneficiary_bank_name_display__c.field-meta.xml
<CustomField>
    <fullName>beneficiary_bank_name_display__c</fullName>
    <label>Beneficiary Bank Name Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>