force-app/main/default/objects/agreement_id_creation__c/fields/effective_date__c.field-meta.xml
<CustomField>
    <fullName>effective_date__c</fullName>
    <label>Effective Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>